--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,5 +28,5 @@
         <activity android:name=".Bosses" android:exported="true" />
 
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
