Implementar totalmente sistema de banco de dados para criação de ranks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.cotucaclicker">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CotucaClicker"
         tools:targetApi="31">
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,10 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Loja" android:exported="true" />
-        <activity android:name=".Bosses" android:exported="true" />
-
+        <activity
+            android:name=".Loja"
+            android:exported="true" />
+        <activity
+            android:name=".Bosses"
+            android:exported="true" />
+        <activity
+            android:name=".Rank"
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
